Downgrade tika-core and tika-parser-audiovideo-module compile target to Java 8
Replace Java 9+ API usages (String.isBlank, List.of, Set.of, readNBytes,
transferTo, getDefinedPackage, nullInputStream, array method refs,
try-with-resources variables) with Java 8 equivalents. Add build.sh for
building only these two modules. Skip checkstyle for modified modules.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>